# ecg-analysis

./: README.md  pyproject.toml
.github/workflows/: ubuntu.yml
src/ecg_analysis/: analyze_ecg.py
